# mcpm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_support.yml  bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  macos-helper-dmg.md  macos-install-troubleshooting.md  release.md  supported-agents.md
docs/releases/: v0.1.0.md  v0.1.1.md
scripts/: check_brand_i18n.mjs  generate_icons.py
scripts/macos/: create-helper-dmg.sh  repair-mcpm.command
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_icons.py
src-tauri/src/: lib.rs  main.rs  runtime.rs  tray.rs
src-tauri/src/agent/: definitions.rs  detect.rs  mod.rs  transform.rs  types.rs
src-tauri/src/commands/: agent.rs  config.rs  mod.rs  process.rs  registry.rs  server.rs
src-tauri/src/format/: json.rs  mod.rs  toml.rs  utils.rs  yaml.rs
src-tauri/src/process/: manager.rs  mod.rs
src-tauri/src/registry/: mod.rs
src-tauri/src/source/: mod.rs
src/hooks/: useLogStream.ts  useTauriEvent.ts
src/lib/: branding.ts  serverProbes.ts  tauri.ts  types.ts  utils.ts
src/pages/: ConfigManager.tsx  Dashboard.tsx  McpManager.tsx  RegistrySearch.tsx  ServerDetail.tsx  Settings.tsx
src/stores/: agentStore.ts  languageStore.ts  (+2 more)
(+20 files in other folders)
