[package]
name = "mcpm"
version = "0.1.1"
description = "MCP Server Management Desktop App"
authors = ["yinhaowei"]
edition = "2021"

# 参考: https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mcpm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.33"
dirs = "6"
which = "7"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
yaml-rust2 = "0.10"
toml = "0.8"
log = "0.4"
regex = "1"
url = "2"
